Fixed number of cards on mobile layout

--- a/src/components/GameField/GameField.css
+++ b/src/components/GameField/GameField.css
@@ -2,37 +2,32 @@
     list-style: none;
     margin: 15px 0;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
 }
 
 @media (min-width: 375px) {
     .cards-list {
-        grid-template-columns: repeat(3, 1fr);
-        gap: 15px;
+        gap: 20px;
     }
 }
 
-@media (min-width: 500px) {
+@media (min-width: 425px) {
     .cards-list {
         grid-template-columns: repeat(4, 1fr);
+        gap: 15px;
     }
 }
 
 @media (min-width: 768px) {
     .cards-list {
+        grid-template-columns: repeat(5, 1fr);
         gap: 20px;
         margin: 20px 0;
     }
 }
 
 @media (min-width: 1024px) {
-    .cards-list {
-        grid-template-columns: repeat(5, 1fr);
-    }
-}
-
-@media (min-width: 1280px) {
     .cards-list {
         grid-template-columns: repeat(6, 1fr);
     }
